iphone scrollbar fix

--- a/public/movie/css/responsive.css
+++ b/public/movie/css/responsive.css
@@ -7,7 +7,7 @@
 
     ::-webkit-scrollbar {
         width: 1px;
-        height: 3px;
+        height: 6px;
     }
 
     ::-webkit-scrollbar-track {
